welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: type mismatch;
 found   : Int
 required: java.awt.Color
		faireV(c);
                       ^